--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 	<script type="importmap">
         {
             "imports": {
-                "three": "./three/three.module.js",
-                "GLTFLoader": "./three/GLTFLoader.js",
-                "OrbitControls": "./three/OrbitControls.js"
+                "three": "/three/three.module.js",
+                "GLTFLoader": "/three/GLTFLoader.js",
+                "OrbitControls": "/three/OrbitControls.js"
             }
         }
     </script>
