--- a/index.html
+++ b/index.html
@@ -18,19 +18,13 @@
 <body>
 	
 
-	<script type="importmap">
-        {
-            "imports": {
-                "three": "./three/three.module.js",
-                "GLTFLoader": "./three/GLTFLoader.js",
-                "OrbitControls": "./three/OrbitControls.js"
-            }
-        }
-    </script>
+	<script src="three.js"></script>
+	<script type="module" src="GLTFLoader.js"></script>
+	<script type="module" src="OrbitControls.js"></script>
 	<script type="module">
-		import * as THREE from 'three';
-		import { OrbitControls } from 'OrbitControls';
-		import {GLTFLoader} from 'GLTFLoader';
+		//import * as THREE from "./three.js";
+		import { OrbitControls } from "./OrbitControls.js";
+		import {GLTFLoader} from "./GLTFLoader.js";
 		
 		var scene = new THREE.Scene();
 		var camera = new THREE.PerspectiveCamera(
